# Fanatic

Android/: build.gradle
Android/app/: build.gradle
Android/app/src/androidTest/kotlin/ca/carleton/elec3907/grouph/fanatic/: ApplicationTest.kt
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/res/layout/: activity_main.xml  fragment_orientation.xml
Android/app/src/main/res/values/: strings.xml
Android/app/src/test/kotlin/ca/carleton/elec3907/grouph/fanatic/: ExampleUnitTest.kt
Android/gradle/wrapper/: gradle-wrapper.properties
ESP8266/: CMakeLists.txt
ESP8266/esp_udp/: .gitignore  CMakeLists.txt
ESP8266/esp_udp/cmake/: ESP8266.toolchain.cmake
ESP8266/esp_udp/user/: user_config.h
ESP8266/user/: user_main.c
FpvAndroid/: .gitignore  build.gradle
FpvAndroid/app/: build.gradle
FpvAndroid/app/src/androidTest/kotlin/ca/carleton/elec3907/grouph/fpvtest/: ApplicationTest.java
FpvAndroid/app/src/main/: AndroidManifest.xml
FpvAndroid/app/src/main/kotlin/ca/carleton/elec3907/grouph/fpvtest/: FpvAndroid.kt
FpvAndroid/app/src/main/res/layout/: activity_main.xml  content_main.xml  fragment_seekbar.xml
FpvAndroid/app/src/main/res/values/: strings.xml
FpvAndroid/app/src/sendToEsp/res/values/: constants.xml
FpvAndroid/app/src/sendToPc/res/values/: constants.xml
FpvController/: .gitignore  Adt7470.h  Adt7470.ino  FpvController.ino  I2cRegisterDevice.h  I2cRegisterDevice.ino  Makefile  Mcp23017.h  Mcp23017.ino  adt7470.ino  i2c.h  i2c.ino
FpvSchematic/: FpvSchematic-cache.lib  FpvSchematic.pro  FpvSchematic.sch
(+35 files in other folders)
